--- a/style.css
+++ b/style.css
@@ -86,6 +86,12 @@ button {  width: auto; overflow: visible; }
     Author: Vincent van Haaff - vincent.vanhaaff.net
  */
 
+blockquote {
+    border-left:3px solid #ddd;
+    margin:15px 30px 0 10px;
+    padding-left:20px;
+}
+
 
 
 /*container*/
@@ -487,22 +493,28 @@ header
     overflow:hidden;
     height:15px;
     width:100%;
-    text-align:center;
+    text-align:left;
 }
 
 .countdownBlock h3 {
-    font-size: 42px;
+    /*font-size: 42px;*/
+    font-size: 32px;
     color: #E20212;
     text-shadow: 1px 1px 0px #bad3ed;
     font-weight: bold;
 }
 
 .countdownBlock2 h3 {
-    font-size: 42px;
+    /*font-size: 42px;*/
+    font-size: 32px;
     color: #344251;
     text-shadow: 1px 1px 0px #bad3ed;
     font-weight: bold;
 }
+
+/*#hourBlock {*/
+    /*width: 70px;*/
+/*}}*/
 
 #ticketsButton
 {
@@ -525,6 +537,26 @@ header
     display:block;
 }
 
+#volunteerButton
+{
+    text-indent:-3000000px;
+}
+
+#volunteerButton a
+{
+    width:251px;
+    height:72px;
+    background: url('images/btn_volunteer_255px.png') 0px 0px;
+    display:block;
+}
+
+#volunteerButton a:hover
+{
+    width:251px;
+    height:72px;
+    background: url('images/btn_volunteer_255px.png') 0px 72px;
+    display:block;
+}
 #mailinglistButton
 {
     text-indent: -3000000px;
@@ -836,6 +868,14 @@ footer
     height:auto;
     overflow:hidden;
 }
+
+#shortcuts div { width: 620px; margin: 0px auto; }
+#shortcuts h1 { margin: 0px 0px 6px; }
+#shortcuts p { margin: 10px 0px 18px; }
+#shortcuts em { font-style: normal; background: #d3d3d3; padding: 3px 9px; position: relative; left: -3px;
+-webkit-border-radius: 4px; -moz-border-radius: 4px; -o-border-radius: 4px; border-radius: 4px;
+-webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1); -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1); -o-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1); box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1); }
+
 
 
 @media all and (orientation:portrait) { 
